--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style/style.css" type="text/css">
-    <title>Document</title>
+    <title>EcoGrow</title>
+    <link rel="icon" href="Imagenes/Logo.jpg" type="image/jpg">
 </head>
 <body>
     <p>hola</p>
