--- a/index.html
+++ b/index.html
@@ -8,8 +8,20 @@
     <link rel="icon" href="Imagenes/Logo.jpg" type="image/jpg">
 </head>
 <body>
-    <p>hola</p>
-    <p>EFKROFW</p>
-    <h1>perdon profe</h1>
+    <header>
+        <nav class="nav">
+            <img src="Imagenes/Logo.jpg" alt="Imagen-logo" title="Imagen-logo"></a>
+            <ul>
+                
+            </ul>
+        </nav>
+        <hr>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
