--- a/index.html
+++ b/index.html
@@ -3,25 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Style/style.css" type="text/css">
-    <title>EcoGrow</title>
-    <link rel="icon" href="Imagenes/Logo.jpg" type="image/jpg">
+    <title>Paginita</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
-    <header>
-        <nav class="nav">
-            <img src="Imagenes/Logo.jpg" alt="Imagen-logo" title="Imagen-logo"></a>
-            <ul>
-                
-            </ul>
-        </nav>
-        <hr>
-    </header>
-    <main>
+    <nav>
+        <figure>
+            <img src="Imagenes/Logo.jpg" alt="Loguito" width="100" height="100">
+        </figure>
+        <ul>
+            <figure>
+            <li>
+                <a href="#">Conócenos</a>
+                <ul>
+                    <li><a href="">Whatsapp</a></li>
+                    <li><a href="">Telegram</a></li>
+                    <li><a href="">Instagram</a></li>
 
-    </main>
-    <footer>
+                </ul>
+                </figure>
 
-    </footer>
+            <li><a href="#">Catálogo</a></li>
+            <li><a href="#">Ofertas</a></li>
+            <li><a href="#">Inicio Sesión</a></li>
+            <li>
+                <a href="#">Registrarse</a>
+            </li>
+        </ul>
+
+    </nav>
 </body>
 </html>
