--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paginita</title>
-    <link rel="stylesheet" href="style.css">
-
+    <title>EcoGrow </title>
+    <link rel="stylesheet" href="Style/style.css">
 </head>
-
 <body>
     <nav>
         <figure>
