--- a/index.html
+++ b/index.html
@@ -5,32 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EcoGrow </title>
     <link rel="stylesheet" href="Style/style.css">
+    <link rel="icon" href="Imagenes/Logo.jpg" type="image/png">
 </head>
 <body>
-    <nav>
-        <figure>
-            <img src="Imagenes/Logo.jpg" alt="Loguito" width="100" height="100">
-        </figure>
-        <ul>
+    <header>
+        <nav>
             <figure>
-            <li>
-                <a href="#">Conócenos</a>
-                <ul>
-                    <li><a href="">Whatsapp</a></li>
-                    <li><a href="">Telegram</a></li>
-                    <li><a href="">Instagram</a></li>
-
-                </ul>
+                <img src="Imagenes/Logo.jpg" alt="Loguito">
+            </figure>
+            <ul>
+                <figure>
+                <li>
+                    <a href="#">Conócenos</a>
+                    <ul>
+                        <li><a href="">Whatsapp</a></li>
+                        <li><a href="">Telegram</a></li>
+                        <li><a href="">Instagram</a></li>
+                    </ul>
                 </figure>
-
-            <li><a href="#">Catálogo</a></li>
-            <li><a href="#">Ofertas</a></li>
-            <li><a href="#">Inicio Sesión</a></li>
-            <li>
-                <a href="#">Registrarse</a>
-            </li>
-        </ul>
-
-    </nav>
+                <li><a href="#">Catálogo</a></li>
+                <li><a href="#">Ofertas</a></li>
+                <li><a href="#">Inicio Sesión</a></li>
+                <li>
+                    <a href="#">Registrarse</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        
+    </main>
 </body>
 </html>
