--- a/index.html
+++ b/index.html
@@ -14,17 +14,27 @@
                 <img src="Imagenes/Logo.jpg" alt="Loguito">
             </figure>
             <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Lo que te ofrecemos</a></li>
                 <figure>
                 <li>
-                    <a href="#">Conócenos</a>
+                    <a href="#">Contactanos</a>
                     <ul>
                         <li><a href="">Whatsapp</a></li>
                         <li><a href="">Telegram</a></li>
                         <li><a href="">Instagram</a></li>
                     </ul>
+                </li>
                 </figure>
-                <li><a href="#">Catálogo</a></li>
-                <li><a href="#">Ofertas</a></li>
+                <figure>
+                    <li>
+                        <a href="#">Informacion</a>
+                        <ul>
+                            <li><a href="">Catálogo</a></li>
+                            <li><a href="">Ofertas</a></li>
+                        </ul>
+                    </li>
+                </figure>
                 <li><a href="#">Inicio Sesión</a></li>
                 <li>
                     <a href="#">Registrarse</a>
@@ -33,7 +43,7 @@
         </nav>
     </header>
     <main>
-        
+
     </main>
 </body>
 </html>
