--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#">Lo que te ofrecemos</a></li>
                 <li>
                     <a href="#">Contactanos</a>
-                    <ul>
+                    <ul class ="menu-vertical">
                         <li><a href="">Whatsapp</a></li>
                         <li><a href="">Telegram</a></li>
                         <li><a href="">Instagram</a></li>
@@ -26,7 +26,7 @@
                 </li>
                 <li>
                     <a href="#">Informacion</a>
-                    <ul>
+                    <ul class ="menu-vertical">
                         <li><a href="">Catálogo</a></li>
                         <li><a href="">Ofertas</a></li>
                     </ul>
