--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                         <li><a href="">Ofertas</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Inicio Sesión</a></li>
+                <li><a class="inicio-sesion" href="#">Inicio Sesión</a></li>
                 <li>
-                    <a href="#">Registrarse</a>
+                    <a class="registrarse" href="#">Registrarse</a>
                 </li>
             </ul>
         </nav>
