--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 </li>
             </ul>
         </nav>
+        <div class="mensaje">
+            <h1 >"Bienvenido a EcoGrow, tu aliado inteligente para cuidar y optimizar tus cultivos con tecnología avanzada."</h1>
+        </div>
     </header>
     <main>
 
