--- a/index.html
+++ b/index.html
@@ -37,8 +37,13 @@
                 </li>
             </ul>
         </nav>
-        <div class="mensaje">
-            <h1 >"Bienvenido a EcoGrow, tu aliado inteligente para cuidar y optimizar tus cultivos con tecnología avanzada."</h1>
+        <div class="mensaje-imagen">
+            <div class="mensaje">
+                <h1 >"Bienvenido a EcoGrow, tu aliado inteligente para cuidar y optimizar tus cultivos con tecnología avanzada."</h1>
+            </div>
+            <div class="imagen">
+
+            </div>
         </div>
     </header>
     <main>
