--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </figure>
             <ul>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">Lo que te ofrecemos</a></li>
+                <li><a href="#ofrecimiento">Lo que te ofrecemos</a></li>
                 <li>
                     <a href="#">Contactanos</a>
                     <ul class ="menu-vertical">
@@ -42,12 +42,41 @@
                 <h1 >"Bienvenido a EcoGrow, tu aliado inteligente para cuidar y optimizar tus cultivos con tecnología avanzada."</h1>
             </div>
             <div class="imagen">
-
             </div>
         </div>
     </header>
-    <main>
-
+    <main id="ofrecimiento">
+        <h2 class="texto">Lo que te ofrecemos</h2>
+        <section class="contenedor" >
+            <div class="caja">
+                <img src="Imagenes/Imagen-2.png" alt="Detección temprana">
+                <p>Detección temprana de plagas y enfermedades mediante análisis de imágenes.</p>
+            </div>
+            <div class="caja">
+                <img src="Imagenes/Imagen-3.png" alt="Recomendaciones personalizadas">
+                <p>Recomendaciones personalizadas de riego y fertilización.</p>
+            </div>
+            <div class="caja">
+                <img src="Imagenes/Imagen-4.png" alt="Monitoreo en tiempo real">
+                <p>Monitoreo en tiempo real de condiciones ambientales (temperatura, humedad, luz solar, calidad del aire).</p>
+            </div>
+            <div class="caja">
+                <img src="Imagenes/Imagen-5.png" alt="Calendario de cultivo">
+                <p>Calendario de cultivo adaptado a tus plantas y región.</p>
+            </div>
+            <div class="caja">
+                <img src="Imagenes/Imagen-6.png" alt="Comparación de precios">
+                <p>Comparación de precios de productos agrícolas.</p>
+            </div>
+            <div class="caja">
+                <img src="Imagenes/Imagen-7.png" alt="Predicción de rendimiento">
+                <p>Predicción de rendimiento basada en condiciones actuales e historial de cuidados.</p>
+            </div>
+        </section>
     </main>
+    <aside>
+
+    </aside>
+
 </body>
 </html>
