--- a/index.html
+++ b/index.html
@@ -75,7 +75,50 @@
         </section>
     </main>
     <aside>
-
+        <section>
+            <h2 class="titulo-aside">Planes para más funciones</h2>
+            <p class="parrafo">Los planes vienen de acuerdo a las demás funciones que ofrecemos que no están agregados al plan gratuito</p>
+        </section>
+        <section class="precios">
+            <div class="plan">
+                <h2>Basic</h2>
+                <p class="precio">$30</p>
+                <ul>
+                    <li class="item">Monitoreo básico de condiciones ambientales</li>
+                    <li class="item">Calendario de cultivo básico</li>
+                    <li class="item">Detección básica de plagas y enfermedades</li>
+                    <li class="item">Recomendaciones generales</li>
+                </ul>
+                <button>Empezar</button>
+            </div>
+            <div class="plan">
+                <h2>Standard</h2>
+                <p class="precio">$60</p>
+                <ul class="lista">
+                    <li class="item">Todo lo del Plan Básico más:</li>
+                    <li class="item">Monitoreo avanzado</li>
+                    <li class="item">Calendario de cultivo personalizado</li>
+                    <li class="item">Detección avanzada de plagas</li>
+                    <li class="item">Recomendaciones de fertilización y riego</li>
+                    <li class="item">Comparación de precios</li>
+                </ul>
+                <button>Empezar</button>
+            </div>
+            <div class="plan">
+                <h2>Premium</h2>
+                <p class="precio">$100</p>
+                <ul class="lista"> 
+                    <li class="item">Todo lo del Plan Estándar más:</li>
+                    <li class="item">Monitoreo en tiempo real completo</li>
+                    <li class="item">Calendario de cultivo inteligente</li>
+                    <li class="item">Detección avanzada con IA mejorada</li>
+                    <li class="item">Predicción de rendimiento</li>
+                    <li class="item">Asesoría agrícola personalizada</li>
+                    <li class="item">Análisis de mercado</li>
+                </ul>
+                <button>Empezar</button>
+            </div>
+        </section>
     </aside>
 
 </body>
