--- a/index.html
+++ b/index.html
@@ -119,7 +119,32 @@
                 <button>Empezar</button>
             </div>
         </section>
+        <section class="noticias">
+            <h2 class="sub-noticias">Últimas noticias</h2>
+            <div class="contenedor2">
+                <div class="principal">
+                    <img src="Imagenes/Imagen-8.png" alt="Incendio en el bosque">
+                    <h2>Controlar la quema de cultivos en Perú: un llamado a la acción</h2>
+                </div>
+                <div class="otros">
+                    <div class="articulo">
+                        <img src="Imagenes/Imagen-9.png" alt="Quema agrícola">
+                        <h3>Quemas agrícolas perjudican calidad del aire</h3>
+                        <a href="#">Read more...</a>
+                    </div>
+                    <div class="articulo">
+                        <img src="Imagenes/Imagen-10.png" alt="Plagas en cultivos">
+                        <h3>Plagas amenazan los cultivos en el norte de Perú</h3>
+                        <a href="#">Read more...</a>
+                    </div>
+                    <div class="articulo">
+                        <img src="Imagenes/Imagen-11.png" alt="Cultivos en el sur">
+                        <h3>Mal clima traerá plagas a cultivos en norte y centro, y bajo rendimiento y sequía en el sur</h3>
+                        <a href="#">Read more...</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </aside>
-
 </body>
 </html>
