--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <li>
                     <a href="#">Informacion</a>
                     <ul class ="menu-vertical">
-                        <li><a href="">Catálogo</a></li>
-                        <li><a href="">Ofertas</a></li>
+                        <li><a href="#of">Catálogo</a></li>
+                        <li><a href="#of">Ofertas</a></li>
                     </ul>
                 </li>
                 <li><a class="inicio-sesion" href="#">Inicio Sesión</a></li>
@@ -74,7 +74,7 @@
             </div>
         </section>
     </main>
-    <aside>
+    <aside id="of">
         <section>
             <h2 class="titulo-aside">Planes para más funciones</h2>
             <p class="parrafo">Los planes vienen de acuerdo a las demás funciones que ofrecemos que no están agregados al plan gratuito</p>
