--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                         <li><a href="#of">Ofertas</a></li>
                     </ul>
                 </li>
-                <li><a class="inicio-sesion" href="index.html">Inicio Sesión</a></li>
+                <li><a class="inicio-sesion" href="login.html">Inicio Sesión</a></li>
                 <li>
-                    <a class="registrarse" href="index.html">Registrarse</a>
+                    <a class="registrarse" href="login.html">Registrarse</a>
                 </li>
             </ul>
         </nav>
