--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <li>
                     <a href="#">Contactanos</a>
                     <ul class ="menu-vertical">
-                        <li><a href="">Whatsapp</a></li>
-                        <li><a href="">Telegram</a></li>
+                        <li><a href="https://wa.me/784658966">Whatsapp</a></li>
+                        <li><a href="https://x.com/EcoGrow396359">Twitter</a></li>
                         <li><a href="">Instagram</a></li>
                     </ul>
                 </li>
@@ -146,5 +146,43 @@
             </div>
         </section>
     </aside>
+    <footer>
+        <section class="subcripciones">
+            <h2>Suscríbete ahora</h2>
+            <p>Si tienes alguna duda puedes escribirnos:</p>
+            <form action="#" method="POST">
+                <input type="email" name="email" placeholder="Coloca tu email aquí...">
+                <button type="submit">Suscríbete</button>
+            </form>
+        </section>
+        
+        <section class="info-extra">
+            <div class="contenido">
+                <div>
+                    <img src="Imagenes/Logo.jpg" alt="Logo EcoGrow" class="logo2">
+                </div>
+                <div>
+                    <h3>Menu</h3>
+                    <ul class="menu">
+                        <li><a href="#">Inicio</a></li>
+                        <li><a href="#">¿Quiénes somos?</a></li>
+                        <li><a href="#">Noticias</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>Redes sociales</h3>
+                    <a href="https://wa.me/784658966" class="links">WhatsApp</a>
+                    <a href="#" class="links">Instagram</a>
+                    <a href="https://x.com/EcoGrow396359" class="links">Twitter</a>
+                </div>
+                <div>
+                    <h3>Contacto</h3>
+                    <p>+51 784658966</p>
+                    <p><a href="mailto:informacionecogrow@gmail.com" class="links">informacionecogrow@gmail.com</a></p>
+                </div>
+            </div>
+            <p class="info-extra2">© Unimaid Materials. All rights reserved</p>
+        </section>
+    </footer>
 </body>
 </html>
