--- a/login.html
+++ b/login.html
@@ -8,6 +8,8 @@
     <link rel="icon" href="Imagenes/Logo.jpg" type="image/png">
 </head>
 <body>
-    <p>prueba</p>
+    <img  src="Imagenes/Logo.jpg" alt="logo">
+    <input type="text" placeholder="Ingrese su gmail o nombre de usuario" name="nombre"/>
+    <input type="password" placeholder="Ingrese su contraseña" name="contraseña"/>
 </body>
 </html>
