--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </li>
                 <li><a class="inicio-sesion" href="login.html">Inicio Sesión</a></li>
                 <li>
-                    <a class="registrarse" href="login.html">Registrarse</a>
+                    <a class="registrarse" href="registro.html">Registrarse</a>
                 </li>
             </ul>
         </nav>
