--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
             </div>
             <button type="submit" class="loguear">Inicio Sesión</button>
             <a href="#" class="contraseña">Recuperar contraseña?</a>
-            <button type="button" class="registro">Registrarse</button>
+            <a href="registro.html" class="registro">Registrarse</a>
         </form>
     </div>
 </body>
