--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <button>Empezar</button>
             </div>
         </section>
-        <section class="noticias">
+        <section id ="noticiass" class="noticias">
             <h2 class="sub-noticias">Últimas noticias</h2>
             <div class="contenedor2">
                 <div class="principal">
@@ -166,7 +166,7 @@
                     <ul class="menu">
                         <li><a href="#">Inicio</a></li>
                         <li><a href="#">¿Quiénes somos?</a></li>
-                        <li><a href="#">Noticias</a></li>
+                        <li><a href="#noticiass">Noticias</a></li>
                     </ul>
                 </div>
                 <div>
