--- a/Fotografia.html
+++ b/Fotografia.html
@@ -4,8 +4,7 @@
 <head>
     <title>Fotografía y Detección de Enfermedades</title>
     <link rel="stylesheet" href="Style/style5.css">
-
-    
+    <link rel="icon" href="Imagenes/Logo.jpg" type="image/png">
 </head>
 <body>
     <div class="container">
