--- a/bienvenida.html
+++ b/bienvenida.html
@@ -30,8 +30,8 @@
             <button onclick="location.href='Informe.html'">
                 Informes y análisis
                 <img src="Imagenes/Informe.png" alt="Icono Informe">
-            </button>
-            <button>
+            </button >
+            <button onclick="location.href='Recomendaciones.html'">
                 Recomendaciones y ayuda
                 <img src="Imagenes/Ayuda.png" alt="Icono Ayuda">
             </button>
