--- a/bienvenida.html
+++ b/bienvenida.html
@@ -35,7 +35,7 @@
                 Recomendaciones y ayuda
                 <img src="Imagenes/Ayuda.png" alt="Icono Ayuda">
             </button>
-            <button>
+            <button onclick="location.href='consultas.html'">
                 Consultas y asesoramiento
                 <img src="Imagenes/Busqueda.png" alt="Icono Chat">
             </button>
