--- a/consultas.html
+++ b/consultas.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Consultas y asesoramiento</title>
+    <link rel="stylesheet" href="Style/style6.css">
+    <link rel="icon" href="Imagenes/Logo.jpg" type="image/png">
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Consultas y asesoramiento</h1>
+        <section class="report">
+            <h2>Programar consultas virtuales con asesores agricolas</h2>
+        </section>
+        <section class="report">
+            <h2>Recomendaciones de asesores </h2>
+        </section>
+        <a href="bienvenida.html">
+        <button class="menu-button">
+            <span class="arrow">←</span> Menú Principal
+        </button>
+    </a>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
