--- a/bienvenida.html
+++ b/bienvenida.html
@@ -43,7 +43,7 @@
                 Pagos y suscripciones
                 <img src="Imagenes/Pagos.png" alt="Icono Pago">
             </button>
-            <button>
+            <button onclick="location.href='condiciones.html'">
                 Condiciones climáticas
                 <img src="Imagenes/Clima.png" alt="Icono Clima">
             </button>
