--- a/bienvenida.html
+++ b/bienvenida.html
@@ -47,7 +47,7 @@
                 Condiciones climáticas
                 <img src="Imagenes/Clima.png" alt="Icono Clima">
             </button>
-            <button>
+            <button onclick="location.href='mercado.html'">
                 Mercado y precios
                 <img src="Imagenes/Precio.png" alt="Icono Mercado">
             </button>
