--- a/bienvenida.html
+++ b/bienvenida.html
@@ -39,7 +39,7 @@
                 Consultas y asesoramiento
                 <img src="Imagenes/Busqueda.png" alt="Icono Chat">
             </button>
-            <button>
+            <button onclick="location.href='pagos.html'">
                 Pagos y suscripciones
                 <img src="Imagenes/Pagos.png" alt="Icono Pago">
             </button>
