--- a/bienvenida.html
+++ b/bienvenida.html
@@ -51,7 +51,7 @@
                 Mercado y precios
                 <img src="Imagenes/Precio.png" alt="Icono Mercado">
             </button>
-            <button>
+            <button onclick="location.href='ayuda.html'">
                 Ayuda al usuario
                 <img src="Imagenes/Ayudaicon.png" alt="Icono Ayuda Usuario">
             </button>
